bug fixes, truncate  titles

--- a/wp-content/themes/livability/assets/sass/elements/_blocks.scss
+++ b/wp-content/themes/livability/assets/sass/elements/_blocks.scss
@@ -1912,8 +1912,8 @@ p.insights-connect-with {
   background: #fff;
   width: 100%;
   position: sticky;
-  top: 70px;
-  z-index: 100;
+  top: 125px;
+  z-index: 9;
   display: flex;
   flex-wrap: wrap;
   background-color: #2c5a99;
